[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/coin.gd" type="Script" id=1]
[ext_resource path="res://sprites/coin/gold_3.png" type="Texture" id=2]
[ext_resource path="res://sprites/coin/gold_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/coin/gold_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/coin/gold_4.png" type="Texture" id=5]
[ext_resource path="res://samples/coin.wav" type="AudioStream" id=6]
[ext_resource path="res://particles/portal_yellowParticle.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 42.348

[sub_resource type="Animation" id=3]

resource_name = "coin_anim"
length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ) ]
}

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 20.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.12
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Initial Velocity", "Trail" ]

[node name="coin" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = "coin_anim"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/coin_anim = SubResource( 3 )
blend_times = [  ]

[node name="queue_timer" type="Timer" parent="." index="3"]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = false

[node name="fx" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="particles" type="Particles2D" parent="." index="5"]

emitting = false
amount = 20
lifetime = 1.0
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.85
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]

[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]

[connection signal="timeout" from="queue_timer" to="." method="_on_timer_timeout"]


